--- a/client/package.json
+++ b/client/package.json
@@ -19,9 +19,9 @@
   },
   "devDependencies": {
     "@babel/core": "7.1.2",
+    "@babel/preset-env": "7.1.0",
     "@webpack-cli/init": "0.1.2",
     "babel-loader": "8.0.4",
-    "babel-preset-env": "1.7.0",
     "webpack": "4.21.0",
     "webpack-cli": "3.1.2"
   }
